# eecs587_term-project

./: .gitignore  CMakeLists.txt  README.md  app.cpp  backend.cu  benchmark.py  kernel.cu  multi-shot.cu  output.txt  s10-r5-o1.txt  s10-r5-o16.txt  s10-r5-o2.txt  s10-r5-o32.txt  s10-r5-o4.txt  s10-r5-o64.txt  s10-r5-o8.txt  scheduler.cpp
include/: backend.h  data.h  kernel.h
scripts/: cmake.sh  submit.sh
